--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -16,12 +16,20 @@ jobs:
   shellcheck:
     runs-on: ubuntu-latest
     steps:
+      # Step 1: Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      # Step 2: Install ShellCheck
       - name: Install ShellCheck
         run: sudo apt-get update && sudo apt-get install -y shellcheck
 
+      # Step 3: Run ShellCheck only if .sh files exist
       - name: Run ShellCheck
         run: |
-          find . -type f -name "*.sh" | xargs shellcheck
+          FILES=$(find . -type f -name "*.sh")
+          if [ -n "$FILES" ]; then
+            echo "$FILES" | xargs shellcheck
+          else
+            echo "No shell scripts found, skipping ShellCheck."
+          fi
